fixed carousel alignment

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     background: white;
-    padding: 20px;
+    padding: 12px;
     font-family: 'Montserrat', sans-serif;
 }
 /* contact */
